# MinecraftInC

./: CMakeLists.txt  README.md  blocks.c  blocks.h  main.c  mesh.c  mesh.h  perlin.c  perlin.h  player.c  player.h  raycast.c  raycast.h  skybox.c  skybox.h  structs.h  textures.c  textures.h  world.c  world.h
textures/: BlockDefinition.cs
